src/objects/qbdialer__ContactScore__c.object
<CustomObject>
    <fields>
        <fullName>qbdialer__ContactLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact these scores are for</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>ContacScoreContactLookup</relationshipLabel>
        <relationshipName>ContacScoreContactLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__LeadLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead these scores are for</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>ContacScoreLeadLookup</relationshipLabel>
        <relationshipName>ContacScoreLeadLookup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>qbdialer__h00__c</fullName>
        <description>InsideSales.com NeuralView Contactability Score for UTC+0</description>
        <label>UTC+0</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__h01__c</fullName>
        <description>InsideSales.com NeuralView Contactability Score for UTC+1</description>
        <label>UTC+1</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__h02__c</fullName>
        <description>InsideSales.com NeuralView Contactability Score for UTC+2</description>
        <label>UTC+2</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>NeuralView: Hourly Contactability Score</label>
    <listViews>
        <fullName>qbdialer__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hourly Contactability Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NeuralView: Hourly Contactability Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>